# cpmk

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  project_builder.rs
wix/: main.wxs
