[package]
name = "cpmk"
version = "2.1.0"
edition = "2021"
authors = ["Sampie"]
description = "A simple C/C++ CLI Project Maker including CMake"
readme = "README.md"
repository = "https://github.com/Sampie159/cpmk"
homepage = "https://github.com/Sampie159/cpmk"
license = "MIT"
documentation = "https://github.com/Sampie159/cpmk/blob/main/README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[[bin]]
name = "cpmk"
path = "src/main.rs"
