[package]
name = "cpmk"
version = "2.1.1"
edition = "2021"
authors = ["Sampie"]
description = "A simple C/C++ CLI Project Maker including CMake"
readme = "README.md"
repository = "https://github.com/Sampie159/cpmk"
homepage = "https://github.com/Sampie159/cpmk"
license = "MIT"
documentation = "https://github.com/Sampie159/cpmk/blob/main/README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[[bin]]
name = "cpmk"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
