[package]
name = "cpmk"
version = "2.1.5"
edition = "2021"
authors = ["Sampie"]
description = "A simple C/C++ CLI Project Maker including CMake"
readme = "README.md"
repository = "https://github.com/Sampie159/cpmk"
homepage = "https://github.com/Sampie159/cpmk"
license = "MIT"
documentation = "https://github.com/Sampie159/cpmk/blob/main/README.md"
categories = ["command-line-utilities"]

[package.metadata.wix]
upgrade-guid = "93E524CF-BDEC-4547-9254-CF1EFC4A6531"
path-guid = "4DA657F8-2BB4-466D-8478-CFCAF7D36728"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[[bin]]
name = "cpmk"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
